tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:24:20
   |
24 |         let left = slice(arr, 0, idx)
   |                    ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:25:21
   |
25 |         let right = slice(arr, idx + 1, len(arr))
   |                     ^^^^^

Hint:
  Define it first: let slice = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day8_part1.flx:49:13
   |
49 |             push(acc, (d * 1000000) + pair_code(i, j))
   |             ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:61:13
   |
61 |     let s = put({}, "p", parents)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day8_part1.flx:62:5
   |
62 |     put(s, "sz", sizes)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:66:11
   |
66 |     match get(state, "p") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day8_part1.flx:73:11
   |
73 |     match get(state, "sz") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day8_part1.flx:106:14
    |
106 | let points = [split_ints(trim(line), ",") | line <- lines, trim(line) != ""]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |              --------------------------------------------------------------- parameter 1 has type `Array<String>`

    |              --------------------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<String>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day8_part1.flx:118:16
    |
118 | let top_keys = slice(sorted_keys, 0, 1000)
    |                ^^^^^

Hint:
  Define it first: let slice = ...;


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day8_part1.flx:123:14
    |
123 | let state1 = fold(top_keys, state0, /(st, k) -> union_key(st, k))
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |              ---------------------------------------------------- parameter 1 has type `Array<_>`

    |              ---------------------------------------------------- this type mismatch is reported here

Note:
  expected parameter type: List<_>
  found parameter type: Array<_>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `List<_>` consistently.


error[E300]: Parameter Type Mismatch

Parameter 1 has the wrong type.

  examples/aoc/2025/aoc_day8_part1.flx:128:11
    |
128 | let top = Array.sort_by(comps, /x -> 0 - x)
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |           --------------------------------- parameter 1 has type `List<Int>`

    |           --------------------------------- this type mismatch is reported here

Note:
  expected parameter type: Array<_>
  found parameter type: List<Int>
  the conflicting types meet at this expression

Help:
  Change parameter 1 to use `Array<_>` consistently.

Found 11 errors.
== stdout ==
<not executed>
